customise cropPickerView to adjust ratio

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 use_frameworks!
 
 target 'CropPickerView_Example' do
-  pod 'CropPickerView', :path => '../'
+  pod 'CropPickerView'
 
   target 'CropPickerView_Tests' do
     inherit! :search_paths
